# ChestRAG

./: .env.example  .gitignore  PROJECT.md  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
eval/: __init__.py  adversarial.jsonl  benchmark.py  llm_judge.py  metrics.py  questions.jsonl  run_eval.py
infra/: aws_setup.md
ingest/: __init__.py  chunk.py  discover.py  embed_and_store.py  fetch.py  parse.py  seed_papers.yaml
services/: __init__.py
services/api/: Dockerfile  agent.py  generate.py  main.py  rerank.py  retrieval.py
services/api/tools/: hf_lookup.py
services/web/: Dockerfile  app.py
tests/: test_agent.py  test_api.py  test_chunking.py  test_retrieval.py
