[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chestrag"
version = "0.1.0"
description = "Retrieval-augmented research tool over the chest X-ray AI literature"
requires-python = ">=3.11"
# Minimal deps for the empty stack. We add llama-index, pymupdf, pgvector drivers,
# etc. as we build the ingest + retrieval pipeline.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.33",
    "httpx>=0.27",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pymupdf>=1.24",
    "llama-index-core>=0.11",
    "llama-index-embeddings-openai>=0.2",
    "llama-index-vector-stores-postgres>=0.2",
    "llama-index-llms-openai>=0.2",
    "sentence-transformers>=3.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

# Tells the build which folders are our importable Python packages.
[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["services", "ingest", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
