[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chestrag"
version = "0.1.0"
description = "Retrieval-augmented research tool over the chest X-ray AI literature"
requires-python = ">=3.11"
# Tiny shared core: everything (web + api + ingest) depends on these.
# Heavier deps live in optional groups below so prod images stay small.
dependencies = [
    "httpx>=0.27",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# What the FastAPI service needs at runtime (retrieval, generation, agent).
# Excludes sentence-transformers (rerank is off by default and lazy-imported) and
# pymupdf (ingest-only) to keep the api image lean.
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "llama-index-core>=0.11",
    "llama-index-embeddings-openai>=0.2",
    "llama-index-vector-stores-postgres>=0.2",
    "llama-index-llms-openai>=0.2",
    "psycopg2-binary>=2.9",
    "openai>=1.40",
    "anthropic>=0.40",
    "google-genai>=1.0",
]

# What the Streamlit frontend needs. It only talks to the api over HTTP, so it
# doesn't need any of the ML / retrieval stack — ~70% smaller image.
web = [
    "streamlit>=1.33",
]

# Ingest pipeline (runs locally, not in prod containers): PDF parsing, chunking,
# embedding. Also pulls sentence-transformers in case the rerank A/B is re-run.
ingest = [
    "pymupdf>=1.24",
    "pyyaml>=6.0",
    "sentence-transformers>=3.0",
    "llama-index-core>=0.11",
    "llama-index-embeddings-openai>=0.2",
    "llama-index-vector-stores-postgres>=0.2",
    "psycopg2-binary>=2.9",
]

dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

# Tells the build which folders are our importable Python packages.
[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["services", "ingest", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
